[package]
authors = ["Akhmed Rakhmati <akhmed.rakhmati@gmail.com>"]
description = "Python Wrapper for Rust Persistent Data Structures"
edition = "2018"
license-file = "LICENSE"
name = "pyrpds"
readme = "README.md"
repository = "https://github.com/arakhmat/pyrpds/"
version = "0.0.2"
keywords = ["python", "rust", "pyrsistent", "persistent", "fast"]
categories = ["data-structures"]

exclude = [
    "unit_tests",
]

[lib]
name = "pyrpds"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.9.2"
features = ["extension-module"]

[dependencies.rpds]
version = "0.7.0"
features = ["serde"]